--- a/RoboParrotSimulator/RoboParrot/package.json
+++ b/RoboParrotSimulator/RoboParrot/package.json
@@ -17,9 +17,22 @@
   },
   "devDependencies": {
     "babel-eslint": "^4.1.3",
+    "babel-preset-es2015": "^6.18.0",
     "eslint": "^1.6.0",
     "eslint-plugin-react": "^3.5.1",
-    "gulp": "^3.9.0",
+    "express": "^4.14.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-beautify": "^2.0.1",
+    "gulp-changed": "^1.3.2",
+    "gulp-clean-dest": "^0.1.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-jshint": "^2.0.4",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-strip-debug": "^1.1.0",
+    "gulp-uglify": "^2.0.0",
+    "jshint": "^2.9.4",
     "react": "^0.14.0",
     "react-component-gulp-tasks": "^0.7.6",
     "react-dom": "^0.14.0"
